fixing docs